changed css files to match GP Connect Pages

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -70,7 +70,7 @@ header.carousel .fill {
 /* Footer Styles */
 
 footer {
-    margin: 50px 0;
+    margin-bottom: 50px;
 }
 
 /* Responsive Styles */
