Test Data Changes

--- a/_includes/testing/patient_data.html
+++ b/_includes/testing/patient_data.html
@@ -1,5 +1,5 @@
 <ul>
-{% for patient in site.data.testing.open_test_data %}
+{% for patient in site.data.open_test_data %}
   <li>{{ patient.FAMILY_NAME }}</li>
 {% endfor %}
 </ul>
